logs/offboard_pkg/build.make.444.log.stderr
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.cpp: In member function ‘Eigen::Vector3d TaskManager::get_ned(double, double, double)’:
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.cpp:100:12: error: ‘trans_and_relative_pos’ was not declared in this scope
  100 |     return trans_and_relative_pos(pos, yaw_d);
      |            ^~~~~~~~~~~~~~~~~~~~~~
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.cpp: At global scope:
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.cpp:103:17: error: no declaration matches ‘Eigen::Vector3d TaskManager::get_ned_line(double, double)’
  103 | Eigen::Vector3d TaskManager::get_ned_line(double dis_now, double yaw_d)
      |                 ^~~~~~~~~~~
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.cpp:103:17: note: no functions named ‘Eigen::Vector3d TaskManager::get_ned_line(double, double)’
In file included from /home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.cpp:1:
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.h:17:7: note: ‘class TaskManager’ defined here
   17 | class TaskManager
      |       ^~~~~~~~~~~
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.cpp:114:17: error: no declaration matches ‘Eigen::Vector3d TaskManager::trans_and_relative_pos(Eigen::Vector3d&, double)’
  114 | Eigen::Vector3d TaskManager::trans_and_relative_pos(Eigen::Vector3d &pos, double yaw_d)
      |                 ^~~~~~~~~~~
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.cpp:114:17: note: no functions named ‘Eigen::Vector3d TaskManager::trans_and_relative_pos(Eigen::Vector3d&, double)’
In file included from /home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.cpp:1:
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.h:17:7: note: ‘class TaskManager’ defined here
   17 | class TaskManager
      |       ^~~~~~~~~~~
make[2]: *** [CMakeFiles/offboard_pkg_node.dir/build.make:76: CMakeFiles/offboard_pkg_node.dir/src/TaskManager.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
make[1]: *** [CMakeFiles/Makefile2:399: CMakeFiles/offboard_pkg_node.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
